[gd_scene load_steps=4 format=3 uid="uid://c28c58lg7kw60"]

[ext_resource type="Script" uid="uid://dekm4asddfu4o" path="res://Scripts/ui.gd" id="1_b3bc3"]
[ext_resource type="PackedScene" uid="uid://7tec4grkfk0f" path="res://dice_button.tscn" id="2_3b2b5"]
[ext_resource type="Script" uid="uid://btn8q0m2iwbog" path="res://buttons.gd" id="2_g6l6n"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b3bc3")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 793.0
offset_right = 833.0
offset_bottom = 40.0

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 14.0
offset_right = 215.0
offset_bottom = 45.0
button_pressed = true
action_mode = 0
text = "Switch inner color"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 68.0
offset_top = 55.0
offset_right = 166.0
offset_bottom = 78.0
text = "Inner color 1"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 68.0
offset_top = 325.0
offset_right = 166.0
offset_bottom = 348.0
text = "Inner color 2"

[node name="Color1" type="ColorPicker" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 80.0
offset_right = 338.0
offset_bottom = 484.0
scale = Vector2(0.537299, 0.52835)
edit_alpha = false
sampler_visible = false
color_modes_visible = false
presets_visible = false

[node name="Color2" type="ColorPicker" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 350.0
offset_right = 338.0
offset_bottom = 754.0
scale = Vector2(0.537299, 0.52835)
edit_alpha = false
sampler_visible = false
color_modes_visible = false
presets_visible = false

[node name="Save" type="Button" parent="."]
layout_mode = 0
offset_left = 245.0
offset_top = 29.0
offset_right = 291.0
offset_bottom = 60.0
text = "Save"

[node name="Load" type="Button" parent="."]
layout_mode = 0
offset_left = 305.0
offset_top = 29.0
offset_right = 351.0
offset_bottom = 60.0
text = "Load"

[node name="LoadDialog" type="FileDialog" parent="."]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 1
root_subfolder = "saved_dice"
filters = PackedStringArray("*.json")
use_native_dialog = true

[node name="SaveDialog" type="FileDialog" parent="."]
access = 1
root_subfolder = "saved_dice"
filters = PackedStringArray("*.json")
use_native_dialog = true

[node name="Buttons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("2_g6l6n")

[node name="dice_button_D4" parent="Buttons" instance=ExtResource("2_3b2b5")]
layout_mode = 1
offset_left = -296.0
offset_top = -33.0
offset_right = -336.0
offset_bottom = -73.0
label_text = "null"

[node name="dice_button_D6" parent="Buttons" instance=ExtResource("2_3b2b5")]
layout_mode = 1
offset_left = -246.0
offset_top = -33.0
offset_right = -286.0
offset_bottom = -73.0
label_text = "null"

[node name="dice_button_D8" parent="Buttons" instance=ExtResource("2_3b2b5")]
layout_mode = 1
offset_left = -196.0
offset_top = -33.0
offset_right = -236.0
offset_bottom = -73.0
label_text = "null"

[node name="dice_button_D10" parent="Buttons" instance=ExtResource("2_3b2b5")]
layout_mode = 1
offset_left = -146.0
offset_top = -33.0
offset_right = -186.0
offset_bottom = -73.0
label_text = "null"

[node name="dice_button_D12" parent="Buttons" instance=ExtResource("2_3b2b5")]
layout_mode = 1
offset_left = -96.0
offset_top = -33.0
offset_right = -136.0
offset_bottom = -73.0
label_text = "null"

[node name="dice_button_D20" parent="Buttons" instance=ExtResource("2_3b2b5")]
layout_mode = 1
offset_left = -46.0
offset_top = -33.0
offset_right = -86.0
offset_bottom = -73.0
label_text = "null"

[node name="dice_button_D100" parent="Buttons" instance=ExtResource("2_3b2b5")]
layout_mode = 1
offset_left = 4.0
offset_top = -33.0
offset_right = -36.0
offset_bottom = -73.0
label_text = "null"

[connection signal="pressed" from="CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="color_changed" from="Color1" to="." method="_on_color_1_color_changed"]
[connection signal="color_changed" from="Color2" to="." method="_on_color_2_color_changed"]
[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Load" to="." method="_on_load_pressed"]
[connection signal="file_selected" from="LoadDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="confirmed" from="SaveDialog" to="." method="_on_save_dialog_confirmed"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_save_dialog_file_selected"]
